--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
             'com.fasterxml.jackson.core:jackson-annotations:2.8.5'
     )
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 
 }
 
