Made some more layouts.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".MainActivity" >
+        <!--<activity android:name=".MainActivity" >-->
+        <activity android:name=".CreateMeme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,6 +20,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListMemeActivity" />
+        <!--<activity android:name=".CreateMeme" />-->
+
+
+
     </application>
 
 </manifest>
