--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     )
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
 }
 
