Inte klar än, men nästan

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <!--<activity android:name=".MainActivity" >-->
-        <activity android:name=".CreateMeme" >
+        <activity android:name=".CreateMemeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListMemeActivity" />
-        <!--<activity android:name=".CreateMeme" />-->
+        <!--<activity android:name=".CreateMemeActivity" />-->
 
 
 
