--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,15 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <!--<activity android:name=".MainActivity" >-->
-        <activity android:name=".CreateMemeActivity" >
+        <activity android:name=".Create.Meme.CreateMemeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListMemeActivity" />
+
+        <activity android:name=".Create.MemeTemplate.ListMemeTemplateActivity" />
         <!--<activity android:name=".CreateMemeActivity" />-->
 
 
